--- a/index.html
+++ b/index.html
@@ -6,9 +6,11 @@
         
         <link rel="stylesheet" href="https://unicons.iconscout.com/release/v4.0.0/css/line.css">
 
+        <link rel="stylesheet" href="style.css">
+
         <title> Sidd's Portfolio </title>
     </head>
     <body>
-
+        <script src="logic.js"></script>
     </body>
 </html>
