--- a/index.html
+++ b/index.html
@@ -11,6 +11,59 @@
         <title> Sidd's Portfolio </title>
     </head>
     <body>
+        
+        <header class="header" id="header">
+            <nav class="nav container">
+                <a href="#" class="nav__logo">Sidd </a> 
+                <div class="nav__menu" id="nav-menu">
+                    <ul class="nav__list grid">
+                        <li class="nav__item">
+                            <a href="#home" class="nav__link">
+                                <i class="uil uil-estate nav__icon"></i> Home
+                            </a>
+                        </li>
+                        <li class="nav__item">
+                            <a href="#about" class="nav__link">
+                                <i class="uil uil-user nav__icon"></i> About
+                            </a>
+                        </li>
+                        <li class="nav__item">
+                            <a href="#skilss" class="nav__link">
+                                <i class="uil uil-file-plus-alt nav__icon"></i> Skills
+                            </a>
+                        </li>
+                        <li class="nav__item">
+                            <a href="#services" class="nav__link">
+                                <i class="uil uil-suitcase-alt nav__icon"></i> Services
+                            </a>
+                        </li>
+                        <li class="nav__item">
+                            <a href="#portfolio" class="nav__link">
+                                <i class="uil uil-scenery nav__icon"></i> Portfolio
+                            </a>
+                        </li>
+                        <li class="nav__item">
+                            <a href="#contact" class="nav__link">
+                                <i class="uil uil-message nav__icon"></i> Contact me
+                            </a>
+                        </li>                    
+                    </ul>
+                    <i class="uil uil-times nav__close nav__icon" id="nav-close"></i>
+                </div>
+
+                <div class="nav__buttons">
+                    <div class="nav__toggle" id="nav-toggle">
+                        <i class="uil uil-apps"></i>
+                    </div>
+                </div>
+            </nav>
+        </header>
+
+
+
+
+
+
         <script src="logic.js"></script>
     </body>
 </html>
